--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async-mutex": "^0.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
