--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@geoapify/react-geocoder-autocomplete": "^2.0.1",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.2",
     "async-mutex": "^0.5.0",
